--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "dependencies": {
     "apollo-boost": "^0.1.7",
     "body-parser": "^1.17.1",
+    "chokidar": "^2.0.3",
     "express": "^4.15.2",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
-    "chokidar": "^2.0.3",
     "mongoose": "^5.1.2",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
