--- a/package.json
+++ b/package.json
@@ -30,25 +30,25 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "gulp-nodemon": "^2.2.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
+    "gulp": "^3.9.1",
+    "gulp-inject": "^4.3.2",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sort": "^2.0.0",
+    "gulp-stylus": "^2.7.0",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-merge": "^4.1.2",
-    "gulp": "^3.9.1",
-    "gulp-inject": "^4.3.2",
-    "gulp-sort": "^2.0.0",
-    "gulp-stylus": "^2.7.0"
+    "webpack-merge": "^4.1.2"
   }
 }
