--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "gulp dev",
     "wp": "webpack --watch",
-    "start": "nodemon server/server.js --exec babel-node --ignore react"
+    "start": "nodemon server/server.js --exec babel-node --ignore react",
+    "test": "nodemon test.js"
   },
   "author": "",
   "license": "ISC",
