--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "mongoose": "^5.1.2",
